[tool.poetry]
name = "fish-tank"
version = "0.1.0"
description = "A warehouse for AgentQL examples and tutorials"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
agentql = "^0.3.0"
openai = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
