[tool.poetry]
name = "fish-tank"
version = "0.1.0"
description = "A warehouse for AgentQL examples and tutorials"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
agentql = "*"
openai = "^1.13.3"
playwright-dompath = "^0.0.1"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
