[tool.poetry]
name = "fish-tank"
version = "0.1.0"
description = "A warehouse for AgentQL examples and tutorials"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
agentql = "*"
openai = "^1.13.3"
playwright-dompath = "^0.0.1"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "^5.13.2"
pylint = "^3.1.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
wrap_length = 100
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["agentql"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
